# mixvm

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  mix_byte.h  mix_machine.cpp  mix_machine.h  mix_printer.cpp  mix_printer.h  mix_small_word.cpp  mix_small_word.h  mix_word.cpp  mix_word.h
mixvm.xcodeproj/: ialexander.mode1v3  ialexander.pbxuser  project.pbxproj
src/app/: main.cpp
src/vm/: CMakeLists.txt  format_range.cpp  format_range.h  mix_array_shifter.h  mix_byte.h  mix_field_specification.cpp  mix_field_specification.h  mix_generic_word.h  mix_instruction.cpp  mix_instruction.h  mix_long_value.cpp  mix_long_value.h  mix_machine.cpp  mix_machine.h  mix_printer.cpp  mix_printer.h  mix_sign.cpp  mix_sign.h  mix_small_word.cpp  mix_small_word.h  mix_word.cpp  mix_word.h
tests/: CMakeLists.txt  CMakeLists.txt.in  gtest.cmake
tests/vm/: field_specification.cpp  generic_word.cpp  machine.cpp  machine_addresses.cpp  machine_arithmetics.cpp  machine_comparisons.cpp  machine_fixture.cpp  machine_fixture.h  machine_jumps.cpp  machine_knuth_loads.cpp  machine_knuth_stores.cpp  machine_loads.cpp  machine_miscellaneous.cpp  machine_stores.cpp  mix_machine.cpp
